# SDTF

./: .gitignore  README.md  pyproject.toml
benchmarks/code/: cc18.py  cc18_gbt.py  cifar10.py  cifar10_sgb.py  ftdf.py  pendigits.py  pendigits_sgb.py  r_xor.py  splice.py  splice_sgb.py  toolbox.py  xnor.py  xor_functions.py
benchmarks/results/sgb/: pendigits_acc.txt  pendigits_test_t.txt  pendigits_train_t.txt  pendigits_v_m_first.txt  pendigits_v_m_second.txt  splice_acc.txt  splice_test_t.txt  splice_train_t.txt  splice_v_m_first.txt  splice_v_m_second.txt
benchmarks/results/xgb/: cc18_acc.json  cc18_test_t.json  cc18_train_t.json
docs/: Iris.ipynb  cc18.ipynb  select.ipynb  xor_experiments.ipynb  zero.ipynb
paper/: appendix.tex  collas2025_conference.sty  content.tex  main_collas2025.bbl  main_collas2025.tex  ref.bib
sdtf/: __init__.py  forest.py
